--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4                    384  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "(1702, 2773)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -199,30 +199,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1702, 24)"
+       "(1702, 23)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "survey['DBN'] = survey[\"dbn\"]\n",
-    "survey.drop(['dbn'],axis=1\\\n",
+    "del survey['dbn']\n",
     "survey.head()\n",
     "survey.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>dbn</th>\n",
        "      <th>rr_s</th>\n",
        "      <th>rr_t</th>\n",
        "      <th>rr_p</th>\n",
@@ -256,6 +255,7 @@
        "      <th>saf_p_11</th>\n",
        "      <th>com_p_11</th>\n",
        "      <th>eng_p_11</th>\n",
+       "      <th>aca_p_11</th>\n",
        "      <th>...</th>\n",
        "      <th>aca_t_11</th>\n",
        "      <th>saf_s_11</th>\n",
@@ -272,7 +272,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>01M015</td>\n",
        "      <td>NaN</td>\n",
        "      <td>88</td>\n",
        "      <td>60</td>\n",
@@ -282,6 +281,7 @@
        "      <td>8.5</td>\n",
        "      <td>7.6</td>\n",
        "      <td>7.5</td>\n",
+       "      <td>7.8</td>\n",
        "      <td>...</td>\n",
        "      <td>7.9</td>\n",
        "      <td>NaN</td>\n",
@@ -296,7 +296,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>01M019</td>\n",
        "      <td>NaN</td>\n",
        "      <td>100</td>\n",
        "      <td>60</td>\n",
@@ -306,6 +305,7 @@
        "      <td>8.4</td>\n",
        "      <td>7.6</td>\n",
        "      <td>7.6</td>\n",
+       "      <td>7.8</td>\n",
        "      <td>...</td>\n",
        "      <td>9.1</td>\n",
        "      <td>NaN</td>\n",
@@ -320,7 +320,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>01M020</td>\n",
        "      <td>NaN</td>\n",
        "      <td>88</td>\n",
        "      <td>73</td>\n",
@@ -330,6 +329,7 @@
        "      <td>8.9</td>\n",
        "      <td>8.3</td>\n",
        "      <td>8.3</td>\n",
+       "      <td>8.6</td>\n",
        "      <td>...</td>\n",
        "      <td>7.5</td>\n",
        "      <td>NaN</td>\n",
@@ -344,7 +344,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>01M034</td>\n",
        "      <td>89.0</td>\n",
        "      <td>73</td>\n",
        "      <td>50</td>\n",
@@ -354,6 +353,7 @@
        "      <td>8.8</td>\n",
        "      <td>8.2</td>\n",
        "      <td>8.0</td>\n",
+       "      <td>8.5</td>\n",
        "      <td>...</td>\n",
        "      <td>7.8</td>\n",
        "      <td>6.2</td>\n",
@@ -368,7 +368,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>01M063</td>\n",
        "      <td>NaN</td>\n",
        "      <td>100</td>\n",
        "      <td>60</td>\n",
@@ -378,6 +377,7 @@
        "      <td>8.7</td>\n",
        "      <td>7.9</td>\n",
        "      <td>8.1</td>\n",
+       "      <td>7.9</td>\n",
        "      <td>...</td>\n",
        "      <td>8.1</td>\n",
        "      <td>NaN</td>\n",
@@ -392,35 +392,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      dbn  rr_s  rr_t  rr_p    N_s   N_t    N_p  saf_p_11  com_p_11  eng_p_11  \\\n",
-       "0  01M015   NaN    88    60    NaN  22.0   90.0       8.5       7.6       7.5   \n",
-       "1  01M019   NaN   100    60    NaN  34.0  161.0       8.4       7.6       7.6   \n",
-       "2  01M020   NaN    88    73    NaN  42.0  367.0       8.9       8.3       8.3   \n",
-       "3  01M034  89.0    73    50  145.0  29.0  151.0       8.8       8.2       8.0   \n",
-       "4  01M063   NaN   100    60    NaN  23.0   90.0       8.7       7.9       8.1   \n",
+       "   rr_s  rr_t  rr_p    N_s   N_t    N_p  saf_p_11  com_p_11  eng_p_11  \\\n",
+       "0   NaN    88    60    NaN  22.0   90.0       8.5       7.6       7.5   \n",
+       "1   NaN   100    60    NaN  34.0  161.0       8.4       7.6       7.6   \n",
+       "2   NaN    88    73    NaN  42.0  367.0       8.9       8.3       8.3   \n",
+       "3  89.0    73    50  145.0  29.0  151.0       8.8       8.2       8.0   \n",
+       "4   NaN   100    60    NaN  23.0   90.0       8.7       7.9       8.1   \n",
        "\n",
-       "    ...    aca_t_11  saf_s_11  com_s_11  eng_s_11  aca_s_11  saf_tot_11  \\\n",
-       "0   ...         7.9       NaN       NaN       NaN       NaN         8.0   \n",
-       "1   ...         9.1       NaN       NaN       NaN       NaN         8.5   \n",
-       "2   ...         7.5       NaN       NaN       NaN       NaN         8.2   \n",
-       "3   ...         7.8       6.2       5.9       6.5       7.4         7.3   \n",
-       "4   ...         8.1       NaN       NaN       NaN       NaN         8.5   \n",
+       "   aca_p_11   ...    aca_t_11  saf_s_11  com_s_11  eng_s_11  aca_s_11  \\\n",
+       "0       7.8   ...         7.9       NaN       NaN       NaN       NaN   \n",
+       "1       7.8   ...         9.1       NaN       NaN       NaN       NaN   \n",
+       "2       8.6   ...         7.5       NaN       NaN       NaN       NaN   \n",
+       "3       8.5   ...         7.8       6.2       5.9       6.5       7.4   \n",
+       "4       7.9   ...         8.1       NaN       NaN       NaN       NaN   \n",
        "\n",
-       "   com_tot_11  eng_tot_11  aca_tot_11     DBN  \n",
-       "0         7.7         7.5         7.9  01M015  \n",
-       "1         8.1         8.2         8.4  01M019  \n",
-       "2         7.3         7.5         8.0  01M020  \n",
-       "3         6.7         7.1         7.9  01M034  \n",
-       "4         7.6         7.9         8.0  01M063  \n",
+       "   saf_tot_11  com_tot_11  eng_tot_11  aca_tot_11     DBN  \n",
+       "0         8.0         7.7         7.5         7.9  01M015  \n",
+       "1         8.5         8.1         8.2         8.4  01M019  \n",
+       "2         8.2         7.3         7.5         8.0  01M020  \n",
+       "3         7.3         6.7         7.1         7.9  01M034  \n",
+       "4         8.5         7.6         7.9         8.0  01M063  \n",
        "\n",
-       "[5 rows x 24 columns]"
+       "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "7"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
