--- a/ Analysing efficacy of standardized tests in US  educational system.ipynb
+++ b/ Analysing efficacy of standardized tests in US  educational system.ipynb
@@ -207,7 +207,7 @@
     {
      "data": {
       "text/plain": [
-       "(1702, 23)"
+       "(1702, 24)"
       ]
      },
      "execution_count": 6,
@@ -247,6 +247,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>dbn</th>\n",
        "      <th>rr_s</th>\n",
        "      <th>rr_t</th>\n",
        "      <th>rr_p</th>\n",
@@ -256,7 +257,6 @@
        "      <th>saf_p_11</th>\n",
        "      <th>com_p_11</th>\n",
        "      <th>eng_p_11</th>\n",
-       "      <th>aca_p_11</th>\n",
        "      <th>...</th>\n",
        "      <th>aca_t_11</th>\n",
        "      <th>saf_s_11</th>\n",
@@ -273,6 +273,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>01M015</td>\n",
        "      <td>NaN</td>\n",
        "      <td>88</td>\n",
        "      <td>60</td>\n",
@@ -282,7 +283,6 @@
        "      <td>8.5</td>\n",
        "      <td>7.6</td>\n",
        "      <td>7.5</td>\n",
-       "      <td>7.8</td>\n",
        "      <td>...</td>\n",
        "      <td>7.9</td>\n",
        "      <td>NaN</td>\n",
@@ -297,6 +297,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>01M019</td>\n",
        "      <td>NaN</td>\n",
        "      <td>100</td>\n",
        "      <td>60</td>\n",
@@ -306,7 +307,6 @@
        "      <td>8.4</td>\n",
        "      <td>7.6</td>\n",
        "      <td>7.6</td>\n",
-       "      <td>7.8</td>\n",
        "      <td>...</td>\n",
        "      <td>9.1</td>\n",
        "      <td>NaN</td>\n",
@@ -321,6 +321,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>01M020</td>\n",
        "      <td>NaN</td>\n",
        "      <td>88</td>\n",
        "      <td>73</td>\n",
@@ -330,7 +331,6 @@
        "      <td>8.9</td>\n",
        "      <td>8.3</td>\n",
        "      <td>8.3</td>\n",
-       "      <td>8.6</td>\n",
        "      <td>...</td>\n",
        "      <td>7.5</td>\n",
        "      <td>NaN</td>\n",
@@ -345,6 +345,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>01M034</td>\n",
        "      <td>89.0</td>\n",
        "      <td>73</td>\n",
        "      <td>50</td>\n",
@@ -354,7 +355,6 @@
        "      <td>8.8</td>\n",
        "      <td>8.2</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>8.5</td>\n",
        "      <td>...</td>\n",
        "      <td>7.8</td>\n",
        "      <td>6.2</td>\n",
@@ -369,6 +369,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>01M063</td>\n",
        "      <td>NaN</td>\n",
        "      <td>100</td>\n",
        "      <td>60</td>\n",
@@ -378,7 +379,6 @@
        "      <td>8.7</td>\n",
        "      <td>7.9</td>\n",
        "      <td>8.1</td>\n",
-       "      <td>7.9</td>\n",
        "      <td>...</td>\n",
        "      <td>8.1</td>\n",
        "      <td>NaN</td>\n",
@@ -393,32 +393,32 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   rr_s  rr_t  rr_p    N_s   N_t    N_p  saf_p_11  com_p_11  eng_p_11  \\\n",
-       "0   NaN    88    60    NaN  22.0   90.0       8.5       7.6       7.5   \n",
-       "1   NaN   100    60    NaN  34.0  161.0       8.4       7.6       7.6   \n",
-       "2   NaN    88    73    NaN  42.0  367.0       8.9       8.3       8.3   \n",
-       "3  89.0    73    50  145.0  29.0  151.0       8.8       8.2       8.0   \n",
-       "4   NaN   100    60    NaN  23.0   90.0       8.7       7.9       8.1   \n",
+       "      dbn  rr_s  rr_t  rr_p    N_s   N_t    N_p  saf_p_11  com_p_11  eng_p_11  \\\n",
+       "0  01M015   NaN    88    60    NaN  22.0   90.0       8.5       7.6       7.5   \n",
+       "1  01M019   NaN   100    60    NaN  34.0  161.0       8.4       7.6       7.6   \n",
+       "2  01M020   NaN    88    73    NaN  42.0  367.0       8.9       8.3       8.3   \n",
+       "3  01M034  89.0    73    50  145.0  29.0  151.0       8.8       8.2       8.0   \n",
+       "4  01M063   NaN   100    60    NaN  23.0   90.0       8.7       7.9       8.1   \n",
        "\n",
-       "   aca_p_11   ...    aca_t_11  saf_s_11  com_s_11  eng_s_11  aca_s_11  \\\n",
-       "0       7.8   ...         7.9       NaN       NaN       NaN       NaN   \n",
-       "1       7.8   ...         9.1       NaN       NaN       NaN       NaN   \n",
-       "2       8.6   ...         7.5       NaN       NaN       NaN       NaN   \n",
-       "3       8.5   ...         7.8       6.2       5.9       6.5       7.4   \n",
-       "4       7.9   ...         8.1       NaN       NaN       NaN       NaN   \n",
+       "    ...    aca_t_11  saf_s_11  com_s_11  eng_s_11  aca_s_11  saf_tot_11  \\\n",
+       "0   ...         7.9       NaN       NaN       NaN       NaN         8.0   \n",
+       "1   ...         9.1       NaN       NaN       NaN       NaN         8.5   \n",
+       "2   ...         7.5       NaN       NaN       NaN       NaN         8.2   \n",
+       "3   ...         7.8       6.2       5.9       6.5       7.4         7.3   \n",
+       "4   ...         8.1       NaN       NaN       NaN       NaN         8.5   \n",
        "\n",
-       "   saf_tot_11  com_tot_11  eng_tot_11  aca_tot_11     DBN  \n",
-       "0         8.0         7.7         7.5         7.9  01M015  \n",
-       "1         8.5         8.1         8.2         8.4  01M019  \n",
-       "2         8.2         7.3         7.5         8.0  01M020  \n",
-       "3         7.3         6.7         7.1         7.9  01M034  \n",
-       "4         8.5         7.6         7.9         8.0  01M063  \n",
+       "   com_tot_11  eng_tot_11  aca_tot_11     DBN  \n",
+       "0         7.7         7.5         7.9  01M015  \n",
+       "1         8.1         8.2         8.4  01M019  \n",
+       "2         7.3         7.5         8.0  01M020  \n",
+       "3         6.7         7.1         7.9  01M034  \n",
+       "4         7.6         7.9         8.0  01M063  \n",
        "\n",
-       "[5 rows x 23 columns]"
+       "[5 rows x 24 columns]"
       ]
      },
      "execution_count": 7,
@@ -443,20 +443,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -477,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +645,7 @@
        "4                   15.0         ATS                             NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +761,7 @@
        "4                    384  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -847,6 +836,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>dbn</th>\n",
        "      <th>school_name</th>\n",
        "      <th>borough</th>\n",
        "      <th>building_code</th>\n",
@@ -856,7 +846,6 @@
        "      <th>grade_span_max</th>\n",
        "      <th>expgrade_span_min</th>\n",
        "      <th>expgrade_span_max</th>\n",
-       "      <th>bus</th>\n",
        "      <th>...</th>\n",
        "      <th>priority09</th>\n",
        "      <th>priority10</th>\n",
@@ -873,6 +862,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>17K548</td>\n",
        "      <td>Brooklyn School for Music &amp; Theatre</td>\n",
        "      <td>Brooklyn</td>\n",
        "      <td>K440</td>\n",
@@ -882,7 +872,6 @@
        "      <td>12</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>B41, B43, B44-SBS, B45, B48, B49, B69</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -897,6 +886,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>09X543</td>\n",
        "      <td>High School for Violin and Dance</td>\n",
        "      <td>Bronx</td>\n",
        "      <td>X400</td>\n",
@@ -906,7 +896,6 @@
        "      <td>12</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Bx13, Bx15, Bx17, Bx21, Bx35, Bx4, Bx41, Bx4A,...</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -921,6 +910,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>09X327</td>\n",
        "      <td>Comprehensive Model School Project M.S. 327</td>\n",
        "      <td>Bronx</td>\n",
        "      <td>X240</td>\n",
@@ -930,7 +920,6 @@
        "      <td>12</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Bx1, Bx11, Bx13, Bx18, Bx2, Bx3, Bx32, Bx35, Bx36</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -945,6 +934,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>02M280</td>\n",
        "      <td>Manhattan Early College School for Advertising</td>\n",
        "      <td>Manhattan</td>\n",
        "      <td>M520</td>\n",
@@ -954,7 +944,6 @@
        "      <td>10</td>\n",
        "      <td>9.0</td>\n",
        "      <td>14.0</td>\n",
-       "      <td>M103, M15, M22, M5, M9</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -969,6 +958,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>28Q680</td>\n",
        "      <td>Queens Gateway to Health Sciences Secondary Sc...</td>\n",
        "      <td>Queens</td>\n",
        "      <td>Q695</td>\n",
@@ -978,7 +968,6 @@
        "      <td>12</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Q25, Q46, Q65</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -993,51 +982,44 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 64 columns</p>\n",
+       "<p>5 rows × 65 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         school_name    borough building_code  \\\n",
-       "0                Brooklyn School for Music & Theatre   Brooklyn          K440   \n",
-       "1                   High School for Violin and Dance      Bronx          X400   \n",
-       "2        Comprehensive Model School Project M.S. 327      Bronx          X240   \n",
-       "3     Manhattan Early College School for Advertising  Manhattan          M520   \n",
-       "4  Queens Gateway to Health Sciences Secondary Sc...     Queens          Q695   \n",
+       "      dbn                                        school_name    borough  \\\n",
+       "0  17K548                Brooklyn School for Music & Theatre   Brooklyn   \n",
+       "1  09X543                   High School for Violin and Dance      Bronx   \n",
+       "2  09X327        Comprehensive Model School Project M.S. 327      Bronx   \n",
+       "3  02M280     Manhattan Early College School for Advertising  Manhattan   \n",
+       "4  28Q680  Queens Gateway to Health Sciences Secondary Sc...     Queens   \n",
        "\n",
-       "     phone_number    fax_number  grade_span_min  grade_span_max  \\\n",
-       "0    718-230-6250  718-230-6262             9.0              12   \n",
-       "1    718-842-0687  718-589-9849             9.0              12   \n",
-       "2    718-294-8111  718-294-8109             6.0              12   \n",
-       "3  718-935-3477             NaN             9.0              10   \n",
-       "4    718-969-3155  718-969-3552             6.0              12   \n",
+       "  building_code    phone_number    fax_number  grade_span_min  grade_span_max  \\\n",
+       "0          K440    718-230-6250  718-230-6262             9.0              12   \n",
+       "1          X400    718-842-0687  718-589-9849             9.0              12   \n",
+       "2          X240    718-294-8111  718-294-8109             6.0              12   \n",
+       "3          M520  718-935-3477             NaN             9.0              10   \n",
+       "4          Q695    718-969-3155  718-969-3552             6.0              12   \n",
        "\n",
-       "   expgrade_span_min  expgrade_span_max  \\\n",
-       "0                NaN                NaN   \n",
-       "1                NaN                NaN   \n",
-       "2                NaN                NaN   \n",
-       "3                9.0               14.0   \n",
-       "4                NaN                NaN   \n",
+       "   expgrade_span_min  expgrade_span_max   ...   priority09 priority10  \\\n",
+       "0                NaN                NaN   ...          NaN        NaN   \n",
+       "1                NaN                NaN   ...          NaN        NaN   \n",
+       "2                NaN                NaN   ...          NaN        NaN   \n",
+       "3                9.0               14.0   ...          NaN        NaN   \n",
+       "4                NaN                NaN   ...          NaN        NaN   \n",
        "\n",
-       "                                                 bus   ...   priority09  \\\n",
-       "0              B41, B43, B44-SBS, B45, B48, B49, B69   ...          NaN   \n",
-       "1  Bx13, Bx15, Bx17, Bx21, Bx35, Bx4, Bx41, Bx4A,...   ...          NaN   \n",
-       "2  Bx1, Bx11, Bx13, Bx18, Bx2, Bx3, Bx32, Bx35, Bx36   ...          NaN   \n",
-       "3                             M103, M15, M22, M5, M9   ...          NaN   \n",
-       "4                                      Q25, Q46, Q65   ...          NaN   \n",
+       "                                          Location 1 Community Board  \\\n",
+       "0  883 Classon Avenue\\nBrooklyn, NY 11225\\n(40.67...             9.0   \n",
+       "1  1110 Boston Road\\nBronx, NY 10456\\n(40.8276026...             3.0   \n",
+       "2  1501 Jerome Avenue\\nBronx, NY 10452\\n(40.84241...             4.0   \n",
+       "3  411 Pearl Street\\nNew York, NY 10038\\n(40.7106...             1.0   \n",
+       "4  160 20 Goethals Avenue\\nJamaica, NY 11432\\n(40...             8.0   \n",
        "\n",
-       "  priority10                                         Location 1  \\\n",
-       "0        NaN  883 Classon Avenue\\nBrooklyn, NY 11225\\n(40.67...   \n",
-       "1        NaN  1110 Boston Road\\nBronx, NY 10456\\n(40.8276026...   \n",
-       "2        NaN  1501 Jerome Avenue\\nBronx, NY 10452\\n(40.84241...   \n",
-       "3        NaN  411 Pearl Street\\nNew York, NY 10038\\n(40.7106...   \n",
-       "4        NaN  160 20 Goethals Avenue\\nJamaica, NY 11432\\n(40...   \n",
-       "\n",
-       "  Community Board  Council District Census Tract        BIN           BBL  \\\n",
-       "0             9.0              35.0        213.0  3029686.0  3.011870e+09   \n",
-       "1             3.0              16.0        135.0  2004526.0  2.026340e+09   \n",
-       "2             4.0              14.0        209.0  2008336.0  2.028590e+09   \n",
-       "3             1.0               1.0         29.0  1001388.0  1.001130e+09   \n",
-       "4             8.0              24.0       1267.0  4539721.0  4.068580e+09   \n",
+       "  Council District  Census Tract        BIN           BBL  \\\n",
+       "0             35.0         213.0  3029686.0  3.011870e+09   \n",
+       "1             16.0         135.0  2004526.0  2.026340e+09   \n",
+       "2             14.0         209.0  2008336.0  2.028590e+09   \n",
+       "3              1.0          29.0  1001388.0  1.001130e+09   \n",
+       "4             24.0        1267.0  4539721.0  4.068580e+09   \n",
        "\n",
        "                                                 NTA     DBN  \n",
        "0  Crown Heights South                           ...  17K548  \n",
@@ -1046,10 +1028,10 @@
        "3  Chinatown                                     ...  02M280  \n",
        "4  Pomonok-Flushing Heights-Hillcrest            ...  28Q680  \n",
        "\n",
-       "[5 rows x 64 columns]"
+       "[5 rows x 65 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1258,13 +1240,13 @@
        "4         01  01M015  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "# adding DBN column in class_Size dataset\n",
     "\n",
     "data['class_size']['DBN'] =  data['class_size']['padded_csd'] + data['class_size']['SCHOOL CODE']\n",
     "data['class_size'].head()"
