--- a/ Analysing efficacy of standardized tests in US  educational system.ipynb
+++ b/ Analysing efficacy of standardized tests in US  educational system.ipynb
@@ -2219,74 +2219,216 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class_size = data['class_size']\n",
+    "bool = (class_size['GRADE '] == \"09-12\")\n",
+    "class_size = class_size[bool]\n",
+    "class_size = class_size[class_size['PROGRAM TYPE'] == 'GEN ED']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CSD</th>\n",
+       "      <th>BOROUGH</th>\n",
+       "      <th>SCHOOL CODE</th>\n",
+       "      <th>SCHOOL NAME</th>\n",
+       "      <th>GRADE</th>\n",
+       "      <th>PROGRAM TYPE</th>\n",
+       "      <th>CORE SUBJECT (MS CORE and 9-12 ONLY)</th>\n",
+       "      <th>CORE COURSE (MS CORE and 9-12 ONLY)</th>\n",
+       "      <th>SERVICE CATEGORY(K-9* ONLY)</th>\n",
+       "      <th>NUMBER OF STUDENTS / SEATS FILLED</th>\n",
+       "      <th>NUMBER OF SECTIONS</th>\n",
+       "      <th>AVERAGE CLASS SIZE</th>\n",
+       "      <th>SIZE OF SMALLEST CLASS</th>\n",
+       "      <th>SIZE OF LARGEST CLASS</th>\n",
+       "      <th>DATA SOURCE</th>\n",
+       "      <th>SCHOOLWIDE PUPIL-TEACHER RATIO</th>\n",
+       "      <th>padded_csd</th>\n",
+       "      <th>DBN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>225</th>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>M292</td>\n",
+       "      <td>Henry Street School for International Studies</td>\n",
+       "      <td>09-12</td>\n",
+       "      <td>GEN ED</td>\n",
+       "      <td>ENGLISH</td>\n",
+       "      <td>English 9</td>\n",
+       "      <td>-</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>STARS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01</td>\n",
+       "      <td>01M292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226</th>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>M292</td>\n",
+       "      <td>Henry Street School for International Studies</td>\n",
+       "      <td>09-12</td>\n",
+       "      <td>GEN ED</td>\n",
+       "      <td>ENGLISH</td>\n",
+       "      <td>English 10</td>\n",
+       "      <td>-</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>26.3</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>STARS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01</td>\n",
+       "      <td>01M292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>227</th>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>M292</td>\n",
+       "      <td>Henry Street School for International Studies</td>\n",
+       "      <td>09-12</td>\n",
+       "      <td>GEN ED</td>\n",
+       "      <td>ENGLISH</td>\n",
+       "      <td>English 11</td>\n",
+       "      <td>-</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>STARS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01</td>\n",
+       "      <td>01M292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>M292</td>\n",
+       "      <td>Henry Street School for International Studies</td>\n",
+       "      <td>09-12</td>\n",
+       "      <td>GEN ED</td>\n",
+       "      <td>ENGLISH</td>\n",
+       "      <td>English 12</td>\n",
+       "      <td>-</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>STARS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01</td>\n",
+       "      <td>01M292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>229</th>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>M292</td>\n",
+       "      <td>Henry Street School for International Studies</td>\n",
+       "      <td>09-12</td>\n",
+       "      <td>GEN ED</td>\n",
+       "      <td>MATH</td>\n",
+       "      <td>Integrated Algebra</td>\n",
+       "      <td>-</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>STARS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01</td>\n",
+       "      <td>01M292</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0           0K\n",
-       "1           0K\n",
-       "2           01\n",
-       "3           01\n",
-       "4           02\n",
-       "5           02\n",
-       "6           03\n",
-       "7           03\n",
-       "8           04\n",
-       "9           05\n",
-       "10       0K-09\n",
-       "11         NaN\n",
-       "12          0K\n",
-       "13          0K\n",
-       "14          01\n",
-       "15          01\n",
-       "16          02\n",
-       "17          03\n",
-       "18          04\n",
-       "19          04\n",
-       "20          05\n",
-       "21          05\n",
-       "22       0K-09\n",
-       "23       0K-09\n",
-       "24         NaN\n",
-       "25          0K\n",
-       "26          0K\n",
-       "27          01\n",
-       "28          01\n",
-       "29          02\n",
-       "         ...  \n",
-       "27581    09-12\n",
-       "27582    09-12\n",
-       "27583    09-12\n",
-       "27584    09-12\n",
-       "27585    09-12\n",
-       "27586    09-12\n",
-       "27587    09-12\n",
-       "27588    09-12\n",
-       "27589    09-12\n",
-       "27590    09-12\n",
-       "27591    09-12\n",
-       "27592    09-12\n",
-       "27593    09-12\n",
-       "27594      NaN\n",
-       "27595    09-12\n",
-       "27596    09-12\n",
-       "27597    09-12\n",
-       "27598    09-12\n",
-       "27599    09-12\n",
-       "27600    09-12\n",
-       "27601    09-12\n",
-       "27602    09-12\n",
-       "27603    09-12\n",
-       "27604    09-12\n",
-       "27605    09-12\n",
-       "27606    09-12\n",
-       "27607    09-12\n",
-       "27608    09-12\n",
-       "27609    09-12\n",
-       "27610      NaN\n",
-       "Name: GRADE , Length: 27611, dtype: object"
+       "     CSD BOROUGH SCHOOL CODE                                    SCHOOL NAME  \\\n",
+       "225    1       M        M292  Henry Street School for International Studies   \n",
+       "226    1       M        M292  Henry Street School for International Studies   \n",
+       "227    1       M        M292  Henry Street School for International Studies   \n",
+       "228    1       M        M292  Henry Street School for International Studies   \n",
+       "229    1       M        M292  Henry Street School for International Studies   \n",
+       "\n",
+       "    GRADE  PROGRAM TYPE CORE SUBJECT (MS CORE and 9-12 ONLY)  \\\n",
+       "225  09-12       GEN ED                              ENGLISH   \n",
+       "226  09-12       GEN ED                              ENGLISH   \n",
+       "227  09-12       GEN ED                              ENGLISH   \n",
+       "228  09-12       GEN ED                              ENGLISH   \n",
+       "229  09-12       GEN ED                                 MATH   \n",
+       "\n",
+       "    CORE COURSE (MS CORE and 9-12 ONLY) SERVICE CATEGORY(K-9* ONLY)  \\\n",
+       "225                           English 9                           -   \n",
+       "226                          English 10                           -   \n",
+       "227                          English 11                           -   \n",
+       "228                          English 12                           -   \n",
+       "229                  Integrated Algebra                           -   \n",
+       "\n",
+       "     NUMBER OF STUDENTS / SEATS FILLED  NUMBER OF SECTIONS  \\\n",
+       "225                               63.0                 3.0   \n",
+       "226                               79.0                 3.0   \n",
+       "227                               38.0                 2.0   \n",
+       "228                               69.0                 3.0   \n",
+       "229                               53.0                 3.0   \n",
+       "\n",
+       "     AVERAGE CLASS SIZE  SIZE OF SMALLEST CLASS  SIZE OF LARGEST CLASS  \\\n",
+       "225                21.0                    19.0                   25.0   \n",
+       "226                26.3                    24.0                   31.0   \n",
+       "227                19.0                    16.0                   22.0   \n",
+       "228                23.0                    13.0                   30.0   \n",
+       "229                17.7                    16.0                   21.0   \n",
+       "\n",
+       "    DATA SOURCE  SCHOOLWIDE PUPIL-TEACHER RATIO padded_csd     DBN  \n",
+       "225       STARS                             NaN         01  01M292  \n",
+       "226       STARS                             NaN         01  01M292  \n",
+       "227       STARS                             NaN         01  01M292  \n",
+       "228       STARS                             NaN         01  01M292  \n",
+       "229       STARS                             NaN         01  01M292  "
       ]
      },
      "execution_count": 25,
@@ -2295,10 +2437,184 @@
     }
    ],
    "source": [
-    "class_size = data['class_size']\n",
-    "bool = (class_size['GRADE '] == \"09-12\")\n",
-    "class_size['GRADE '] = class_size[bool,'GRADE ']\n",
-    "class_size['GRADE '].unique()-"
+    "class_size.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#As we saw when we displayed class_size on the last screen, DBN still isn't completely unique. This is due to the CORE COURSE (MS CORE and 9-12 ONLY) and CORE SUBJECT (MS CORE and 9-12 ONLY) columns.\n",
+    "# CORE COURSE (MS CORE and 9-12 ONLY) and CORE SUBJECT (MS CORE and 9-12 ONLY) seem to pertain to different kinds of classes. For example, here are the unique values for CORE SUBJECT (MS CORE and 9-12 ONLY):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['-', nan, 'ENGLISH', 'MATH', 'SCIENCE', 'SOCIAL STUDIES'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['class_size']['CORE SUBJECT (MS CORE and 9-12 ONLY)'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#This column only seems to include certain subjects. We want our class size data to include every single class a school offers -- not just a subset of them. What we can do is take the average across all of the classes a school offers. This will give us unique DBN values, while also incorporating as much data as possible into the average."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DBN</th>\n",
+       "      <th>CSD</th>\n",
+       "      <th>NUMBER OF STUDENTS / SEATS FILLED</th>\n",
+       "      <th>NUMBER OF SECTIONS</th>\n",
+       "      <th>AVERAGE CLASS SIZE</th>\n",
+       "      <th>SIZE OF SMALLEST CLASS</th>\n",
+       "      <th>SIZE OF LARGEST CLASS</th>\n",
+       "      <th>SCHOOLWIDE PUPIL-TEACHER RATIO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01M292</td>\n",
+       "      <td>1</td>\n",
+       "      <td>88.0000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>22.564286</td>\n",
+       "      <td>18.50</td>\n",
+       "      <td>26.571429</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01M332</td>\n",
+       "      <td>1</td>\n",
+       "      <td>46.0000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>21.00</td>\n",
+       "      <td>23.500000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01M378</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33.0000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>33.00</td>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01M448</td>\n",
+       "      <td>1</td>\n",
+       "      <td>105.6875</td>\n",
+       "      <td>4.750000</td>\n",
+       "      <td>22.231250</td>\n",
+       "      <td>18.25</td>\n",
+       "      <td>27.062500</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>01M450</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57.6000</td>\n",
+       "      <td>2.733333</td>\n",
+       "      <td>21.200000</td>\n",
+       "      <td>19.40</td>\n",
+       "      <td>22.866667</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      DBN  CSD  NUMBER OF STUDENTS / SEATS FILLED  NUMBER OF SECTIONS  \\\n",
+       "0  01M292    1                            88.0000            4.000000   \n",
+       "1  01M332    1                            46.0000            2.000000   \n",
+       "2  01M378    1                            33.0000            1.000000   \n",
+       "3  01M448    1                           105.6875            4.750000   \n",
+       "4  01M450    1                            57.6000            2.733333   \n",
+       "\n",
+       "   AVERAGE CLASS SIZE  SIZE OF SMALLEST CLASS  SIZE OF LARGEST CLASS  \\\n",
+       "0           22.564286                   18.50              26.571429   \n",
+       "1           22.000000                   21.00              23.500000   \n",
+       "2           33.000000                   33.00              33.000000   \n",
+       "3           22.231250                   18.25              27.062500   \n",
+       "4           21.200000                   19.40              22.866667   \n",
+       "\n",
+       "   SCHOOLWIDE PUPIL-TEACHER RATIO  \n",
+       "0                             NaN  \n",
+       "1                             NaN  \n",
+       "2                             NaN  \n",
+       "3                             NaN  \n",
+       "4                             NaN  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "grouped = class_size.groupby('DBN').agg(numpy.mean)\n",
+    "class_size = grouped\n",
+    "class_size.reset_index(inplace=True)\n",
+    "data['class_size'] = class_size\n",
+    "data['class_size'].head()"
    ]
   },
   {
