--- a/ Analysing efficacy of standardized tests in US  educational system.ipynb
+++ b/ Analysing efficacy of standardized tests in US  educational system.ipynb
@@ -2441,15 +2441,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "#As we saw when we displayed class_size on the last screen, DBN still isn't completely unique. This is due to the CORE COURSE (MS CORE and 9-12 ONLY) and CORE SUBJECT (MS CORE and 9-12 ONLY) columns.\n",
-    "# CORE COURSE (MS CORE and 9-12 ONLY) and CORE SUBJECT (MS CORE and 9-12 ONLY) seem to pertain to different kinds of classes. For example, here are the unique values for CORE SUBJECT (MS CORE and 9-12 ONLY):"
+    "#### As we saw when we displayed class_size on the last screen, DBN still isn't completely unique. This is due to the CORE COURSE (MS CORE and 9-12 ONLY) and CORE SUBJECT (MS CORE and 9-12 ONLY) columns.\n",
+    "#### CORE COURSE (MS CORE and 9-12 ONLY) and CORE SUBJECT (MS CORE and 9-12 ONLY) seem to pertain to different kinds of classes. For example, here are the unique values for CORE SUBJECT (MS CORE and 9-12 ONLY):"
    ]
   },
   {
@@ -2474,19 +2472,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#This column only seems to include certain subjects. We want our class size data to include every single class a school offers -- not just a subset of them. What we can do is take the average across all of the classes a school offers. This will give us unique DBN values, while also incorporating as much data as possible into the average."
+    "#### This column only seems to include certain subjects. We want our class size data to include every single class a school offers -- not just a subset of them. What we can do is take the average across all of the classes a school offers. This will give us unique DBN values, while also incorporating as much data as possible into the average."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2603,7 +2597,7 @@
        "4                             NaN  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2615,6 +2609,335 @@
     "class_size.reset_index(inplace=True)\n",
     "data['class_size'] = class_size\n",
     "data['class_size'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Now that we've finished condensing class_size, let's condense demographics. The first few rows look like this:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10075, 38)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DBN</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>schoolyear</th>\n",
+       "      <th>fl_percent</th>\n",
+       "      <th>frl_percent</th>\n",
+       "      <th>total_enrollment</th>\n",
+       "      <th>prek</th>\n",
+       "      <th>k</th>\n",
+       "      <th>grade1</th>\n",
+       "      <th>grade2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>black_num</th>\n",
+       "      <th>black_per</th>\n",
+       "      <th>hispanic_num</th>\n",
+       "      <th>hispanic_per</th>\n",
+       "      <th>white_num</th>\n",
+       "      <th>white_per</th>\n",
+       "      <th>male_num</th>\n",
+       "      <th>male_per</th>\n",
+       "      <th>female_num</th>\n",
+       "      <th>female_per</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01M015</td>\n",
+       "      <td>P.S. 015 ROBERTO CLEMENTE</td>\n",
+       "      <td>20052006</td>\n",
+       "      <td>89.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>281</td>\n",
+       "      <td>15</td>\n",
+       "      <td>36</td>\n",
+       "      <td>40</td>\n",
+       "      <td>33</td>\n",
+       "      <td>...</td>\n",
+       "      <td>74</td>\n",
+       "      <td>26.3</td>\n",
+       "      <td>189</td>\n",
+       "      <td>67.3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>158.0</td>\n",
+       "      <td>56.2</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>43.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01M015</td>\n",
+       "      <td>P.S. 015 ROBERTO CLEMENTE</td>\n",
+       "      <td>20062007</td>\n",
+       "      <td>89.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>243</td>\n",
+       "      <td>15</td>\n",
+       "      <td>29</td>\n",
+       "      <td>39</td>\n",
+       "      <td>38</td>\n",
+       "      <td>...</td>\n",
+       "      <td>68</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>153</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>57.6</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>42.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01M015</td>\n",
+       "      <td>P.S. 015 ROBERTO CLEMENTE</td>\n",
+       "      <td>20072008</td>\n",
+       "      <td>89.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>261</td>\n",
+       "      <td>18</td>\n",
+       "      <td>43</td>\n",
+       "      <td>39</td>\n",
+       "      <td>36</td>\n",
+       "      <td>...</td>\n",
+       "      <td>77</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>157</td>\n",
+       "      <td>60.2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>54.8</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>45.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01M015</td>\n",
+       "      <td>P.S. 015 ROBERTO CLEMENTE</td>\n",
+       "      <td>20082009</td>\n",
+       "      <td>89.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>252</td>\n",
+       "      <td>17</td>\n",
+       "      <td>37</td>\n",
+       "      <td>44</td>\n",
+       "      <td>32</td>\n",
+       "      <td>...</td>\n",
+       "      <td>75</td>\n",
+       "      <td>29.8</td>\n",
+       "      <td>149</td>\n",
+       "      <td>59.1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>149.0</td>\n",
+       "      <td>59.1</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>40.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>01M015</td>\n",
+       "      <td>P.S. 015 ROBERTO CLEMENTE</td>\n",
+       "      <td>20092010</td>\n",
+       "      <td></td>\n",
+       "      <td>96.5</td>\n",
+       "      <td>208</td>\n",
+       "      <td>16</td>\n",
+       "      <td>40</td>\n",
+       "      <td>28</td>\n",
+       "      <td>32</td>\n",
+       "      <td>...</td>\n",
+       "      <td>67</td>\n",
+       "      <td>32.2</td>\n",
+       "      <td>118</td>\n",
+       "      <td>56.7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>59.6</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>40.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 38 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      DBN                       Name  schoolyear fl_percent  frl_percent  \\\n",
+       "0  01M015  P.S. 015 ROBERTO CLEMENTE    20052006       89.4          NaN   \n",
+       "1  01M015  P.S. 015 ROBERTO CLEMENTE    20062007       89.4          NaN   \n",
+       "2  01M015  P.S. 015 ROBERTO CLEMENTE    20072008       89.4          NaN   \n",
+       "3  01M015  P.S. 015 ROBERTO CLEMENTE    20082009       89.4          NaN   \n",
+       "4  01M015  P.S. 015 ROBERTO CLEMENTE    20092010                    96.5   \n",
+       "\n",
+       "   total_enrollment prek   k grade1 grade2    ...     black_num black_per  \\\n",
+       "0               281   15  36     40     33    ...            74      26.3   \n",
+       "1               243   15  29     39     38    ...            68      28.0   \n",
+       "2               261   18  43     39     36    ...            77      29.5   \n",
+       "3               252   17  37     44     32    ...            75      29.8   \n",
+       "4               208   16  40     28     32    ...            67      32.2   \n",
+       "\n",
+       "  hispanic_num hispanic_per white_num white_per male_num male_per female_num  \\\n",
+       "0          189         67.3         5       1.8    158.0     56.2      123.0   \n",
+       "1          153         63.0         4       1.6    140.0     57.6      103.0   \n",
+       "2          157         60.2         7       2.7    143.0     54.8      118.0   \n",
+       "3          149         59.1         7       2.8    149.0     59.1      103.0   \n",
+       "4          118         56.7         6       2.9    124.0     59.6       84.0   \n",
+       "\n",
+       "  female_per  \n",
+       "0       43.8  \n",
+       "1       42.4  \n",
+       "2       45.2  \n",
+       "3       40.9  \n",
+       "4       40.4  \n",
+       "\n",
+       "[5 rows x 38 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(data['demographics'].shape)\n",
+    "data['demographics'].head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### In this case, the only column that prevents a given DBN from being unique is schoolyear. We only want to select rows where schoolyear is 20112012. This will give us the most recent year of data, and also match our SAT results data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bool = data['demographics']['schoolyear'] == 20112012"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        False\n",
+       "1        False\n",
+       "2        False\n",
+       "3        False\n",
+       "4        False\n",
+       "5        False\n",
+       "6         True\n",
+       "7        False\n",
+       "8        False\n",
+       "9        False\n",
+       "10       False\n",
+       "11       False\n",
+       "12       False\n",
+       "13        True\n",
+       "14       False\n",
+       "15       False\n",
+       "16       False\n",
+       "17       False\n",
+       "18       False\n",
+       "19       False\n",
+       "20        True\n",
+       "21       False\n",
+       "22       False\n",
+       "23       False\n",
+       "24       False\n",
+       "25       False\n",
+       "26       False\n",
+       "27        True\n",
+       "28       False\n",
+       "29       False\n",
+       "         ...  \n",
+       "10045    False\n",
+       "10046     True\n",
+       "10047    False\n",
+       "10048    False\n",
+       "10049    False\n",
+       "10050    False\n",
+       "10051    False\n",
+       "10052    False\n",
+       "10053     True\n",
+       "10054    False\n",
+       "10055    False\n",
+       "10056    False\n",
+       "10057    False\n",
+       "10058    False\n",
+       "10059    False\n",
+       "10060     True\n",
+       "10061    False\n",
+       "10062    False\n",
+       "10063    False\n",
+       "10064    False\n",
+       "10065    False\n",
+       "10066    False\n",
+       "10067     True\n",
+       "10068    False\n",
+       "10069    False\n",
+       "10070    False\n",
+       "10071    False\n",
+       "10072    False\n",
+       "10073    False\n",
+       "10074     True\n",
+       "Name: schoolyear, Length: 10075, dtype: bool"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['demographics'] = (data['demographics'][bool])"
    ]
   },
   {
