--- a/ Analysing efficacy of standardized tests in US  educational system.ipynb
+++ b/ Analysing efficacy of standardized tests in US  educational system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 208,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "4                    384  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "(1702, 2773)"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 212,
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "(1702, 24)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 215,
    "metadata": {
     "collapsed": true
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "4                   15.0         ATS                             NaN  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
        "4                    384  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 218,
    "metadata": {
     "collapsed": true
    },
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 219,
    "metadata": {
     "collapsed": true
    },
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
        "[5 rows x 65 columns]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
        "4         01  01M015  "
       ]
      },
-     "execution_count": 156,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
        "4                433.0                   384.0     1207.0  "
       ]
      },
-     "execution_count": 157,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1403,7 @@
        "['40.8276026690005, -73.90447525699966']"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1642,7 @@
        "[5 rows x 66 columns]"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1884,7 @@
        "[5 rows x 67 columns]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1900,7 +1900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 226,
    "metadata": {
     "collapsed": true
    },
@@ -1911,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 227,
    "metadata": {
     "collapsed": true
    },
@@ -1922,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 228,
    "metadata": {
     "scrolled": true
    },
@@ -2150,7 +2150,7 @@
        "[5 rows x 67 columns]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2161,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -2176,7 +2176,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2188,7 +2188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -2198,7 +2198,7 @@
        "       'MS Core', '09-12', '09'], dtype=object)"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2219,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 231,
    "metadata": {
     "collapsed": true
    },
@@ -2233,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -2431,7 +2431,7 @@
        "229       STARS                             NaN         01  01M292  "
       ]
      },
-     "execution_count": 167,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2452,7 +2452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -2462,7 +2462,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2480,7 +2480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -2597,7 +2597,7 @@
        "4                             NaN  "
       ]
      },
-     "execution_count": 169,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2621,7 +2621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -2833,7 +2833,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2852,7 +2852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 236,
    "metadata": {
     "collapsed": true
    },
@@ -2863,7 +2863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 237,
    "metadata": {
     "collapsed": true
    },
@@ -2874,7 +2874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -3079,7 +3079,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3090,7 +3090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -3099,7 +3099,7 @@
        "(1509, 38)"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3125,7 +3125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -3358,7 +3358,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3374,7 +3374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -4029,7 +4029,7 @@
        "[258 rows x 5 columns]"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4050,7 +4050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 242,
    "metadata": {
     "collapsed": true
    },
@@ -4062,7 +4062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -4071,7 +4071,7 @@
        "(479, 33)"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4083,7 +4083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 244,
    "metadata": {
     "collapsed": true
    },
@@ -4099,7 +4099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -4108,7 +4108,7 @@
        "(363, 166)"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4126,7 +4126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 246,
    "metadata": {
     "collapsed": true
    },
@@ -4146,7 +4146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 247,
    "metadata": {
     "collapsed": true
    },
@@ -4157,7 +4157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -4227,7 +4227,7 @@
        "Length: 166, dtype: bool"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4246,7 +4246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -4260,7 +4260,7 @@
        "Name: school_dist, dtype: object"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4274,7 +4274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -4363,16 +4363,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f06643de4e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f065c1e7828>"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4402,7 +4402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -4431,7 +4431,7 @@
        "Name: School Name, dtype: object"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4453,16 +4453,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f0664296748>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f066422aeb8>"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4478,7 +4478,46 @@
     }
    ],
    "source": [
-    "combined.plot.scatter(x='ell_percent', y='sat_score')\n"
+    "combined.plot.scatter(x='ell_percent', y='sat_score')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### It looks like ell_percent correlates with sat_score more strongly, because the scatterplot is more linear. However, there's still the cluster of schools that have very high ell_percent values and low sat_score values. This cluster represents the same group of international high schools we investigated earlier.\n",
+    "\n",
+    "In order to explore this relationship, we'll want to map out ell_percent by school district. The map will show us which areas of the city have a lot of English language learners."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import conda\n",
+    "\n",
+    "conda_file_dir = conda.__file__\n",
+    "conda_dir = conda_file_dir.split('lib')[0]\n",
+    "proj_lib = os.path.join(os.path.join(conda_dir, 'share'), 'proj')\n",
+    "os.environ[\"PROJ_LIB\"] = proj_lib\n",
+    "\n",
+    "\n",
+    "from mpl_toolkits.basemap import Basemap\n",
+    "m = Basemap(\n",
+    "    projection='merc', \n",
+    "    llcrnrlat=40.496044, \n",
+    "    urcrnrlat=40.915256, \n",
+    "    llcrnrlon=-74.255735, \n",
+    "    urcrnrlon=-73.700272,\n",
+    "    resolution='i'\n",
+    ")\n",
+    "m.scatter(longitudes,latitudes,s=20,zorder=2,latlon=True)\n",
+    "m.drawmapboundary(fill_color='#85A6D9')\n",
+    "m.drawcoastlines(color='#6D5F47', linewidth=.4)\n",
+    "m.drawrivers(color='#6D5F47', linewidth=.4)"
    ]
   },
   {
